# tensorrtx

./: .gitignore
resnet/: CMakeLists.txt  classificator.cpp  classificator.h  common.cpp  common.h  common.hpp  main.cpp  resnet18.cpp  resnet18.h  resnet50.cpp  resnet50.h
tutorials/: from_pytorch_to_trt_stepbystep_hrnet.md
ufld/: README.md
yolov5/: CMakeLists.txt  common.cpp  common.h  detector.cpp  detector.h  kk.cpp  kk.h  main.cpp  roidetector.cpp  roidetector.h  test.cpp  utils.h  yololayer.cu  yololayer.h  yolov5.cpp  yolov5.h
